--- a/html/skin/agnph/gallery/viewpost-style.css
+++ b/html/skin/agnph/gallery/viewpost-style.css
@@ -181,6 +181,8 @@
 @media only handheld, screen and (max-device-width: 820px), screen and (max-width: 820px) {
     .post-layout-container {
         display: table;
+        table-layout: fixed;
+        word-wrap: break-word;
         table-layout:fixed;
         overflow: hidden;
     }
