--- a/html/skin/agnph/index-style.css
+++ b/html/skin/agnph/index-style.css
@@ -56,6 +56,8 @@
 @media only handheld, screen and (max-device-width: 820px), screen and (max-width: 820px) {
     .index-table {
         display: table;
+        table-layout: fixed;
+        word-wrap: break-word;
         width: 100%;
     }
     .center-column {
